# Ableton_python

./: .gitignore  main.py
CBBWorkstation/: .gitignore  CMakeLists.txt  README.md
CBBWorkstation/Source/: Main.cpp  MainComponent.cpp  MainComponent.h
CBBWorkstation/Source/Domain/: Chord.h  Section.h  Style.h
CBBWorkstation/Source/Engine/: ChordParser.h  MidiPlaybackEngine.h  PatternGenerator.h
CBBWorkstation/Source/UI/: BackingSummaryComponent.cpp  BackingSummaryComponent.h  ChordInputComponent.cpp  ChordInputComponent.h  GrooveControlComponent.cpp  GrooveControlComponent.h  SectionPanelComponent.cpp  SectionPanelComponent.h  TransportComponent.cpp  TransportComponent.h
CBBWorkstation/chordflow-analyzer/: README.md  analyze.py  evaluate.py  requirements.txt
CBBWorkstation/chordflow-analyzer/chordflow_analyzer/: __init__.py  audio_loader.py  beat_tracker.py  chart_builder.py  chord_estimator.py  chord_templates.py  chroma_extractor.py  enharmonic.py  key_context.py  key_estimator.py  models.py  post_processor.py  sequence_smoother.py
CBBWorkstation/chordflow-analyzer/chordflow_analyzer/advanced/: __init__.py  decoder.py  features.py  vocabulary.py
CBBWorkstation/chordflow-analyzer/chordflow_analyzer/backends/: __init__.py  advanced_backend.py  base.py  chordino_backend.py  ensemble_backend.py  template_backend.py
CBBWorkstation/chordflow-analyzer/experiments/: draft_ground_truth.py  measure.py  show_chart.py
CBBWorkstation/chordflow-analyzer/ground_truth/: samplemusic-bars.draft.json  samplemusic-bars.full.draft.json  samplemusic-bars.json  samplemusic-worksheet.md
CBBWorkstation/chordflow-analyzer/output/: samplemusic-chord-chart.json
CBBWorkstation/docs/: ARCHITECTURE.md  DEVELOPMENT_ROADMAP.md  MVP_SCOPE.md  PROJECT_DEFINITION.md  WORKFLOW.md
VoltaWebPage/: README.md
VoltaWebPage/backend/: main.py  requirements.txt
VoltaWebPage/backend/routers/: audio.py
VoltaWebPage/backend/services/: audio_processing.py
VoltaWebPage/frontend/: next.config.ts  package-lock.json  package.json
VoltaWebPage/frontend/src/app/: globals.css  layout.tsx  page.tsx
VoltaWebPage/frontend/src/app/tools/daw-workspace/: page.tsx
VoltaWebPage/frontend/src/app/tools/low-high-cut/: page.tsx
VoltaWebPage/frontend/src/app/tools/trim/: page.tsx
VoltaWebPage/frontend/src/app/tools/upload-waveforms/: page.tsx
ai-mixing-web-mvp/: README.md
ai-mixing-web-mvp/backend/: main.py  requirements.txt
ai-mixing-web-mvp/backend/routers/: actions.py  analysis.py  projects.py  tracks.py
ai-mixing-web-mvp/backend/services/: audio_analysis.py  audio_processing.py  storage.py
ai-mixing-web-mvp/backend/sessions/: action_session.py  analysis_session.py  project_session.py  track_session.py
ai-mixing-web-mvp/frontend/: package-lock.json  package.json  tailwind.config.ts
ai-mixing-web-mvp/frontend/src/app/: globals.css  layout.tsx  page.tsx
ai-mixing-web-mvp/frontend/src/components/: AnalysisPanel.tsx  PreviewPanel.tsx  TrackList.tsx  UploadPanel.tsx
ai-mixing-web-mvp/frontend/src/lib/: api.ts
ai-mixing-web-mvp/frontend/src/types/: session.ts
data/: flat_params.json  nested_params.json
